tests/pass/Division.java
package pass;

import java.lang.System;

public class Division {
    public static int divide (int x, int y) {
        return x/y;
    }

    public static void main(String[] args) {
        System.out.println(divide(15,3));
    }
}
