tests/fail/BitXorErrors.java
package fail;

import java.lang.System;

public class XorErrors {
    public static void main(String[] args){
        System.out.println( 'a' ^ 4);
    }
}